# fl-thesis-project

./: .env.example  .gitignore  README.md  data_loader.py  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirments.txt  run_simulation.py  simulation.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
api/: aggregation.py  config.py  data_processing.py  fl_engine.py  main.py  state.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/api/: aggregation.py  local_training.py  main.py
backend/results/: fl_state.json  global_params.pt  simulation_results.json
backend/src/: utils.py
client/: hospital_client.py
data/hospital_uploads/: cleveland.csv  hungarian.csv
docs/: client_guide.md  data_loading_guide.md  final_summary.md  getting-started.md  index.md  project_overview.md  server_guide.md  understanding_output.md
docs/api/: client.md  data-loader.md  data_loader.md  index.md  model.md  server.md  utils.md
docs/concepts/: architecture.md  federated-averaging.md  index.md  privacy.md
docs/guides/: client.md  index.md  (+3 more)
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  source.config.ts
results/: fl_state.json  global_params.pt  simulation_results.json
scripts/: check_data.py  download_data.py  run_client.py  verify_setup.py
simple_fl/: README.md  client.py  data_loader.py  model.py  run_client.py  server.py
site/: 404.html  index.html  sitemap.xml
src/: client.py  server.py
ui/: README.md  app.py  fl_runner.py  state_manager.py
(+52 files in other folders)
